bugfix: text covered the icon whe width was small

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1em;
+    padding: 0.5em;
 } 
 
 #tours-name {
@@ -120,6 +120,7 @@ button {
     border-radius: 12px;
     background-color: #1269C7;
     border: 1px solid black;
+    box-shadow: 0px 0px 10px 1px;
 }
 
 blockquote {
